Fixed Start Button, Options sizing, About page z-index, and added random fill button to options menu

--- a/styles/global.css
+++ b/styles/global.css
@@ -269,6 +269,7 @@ h6 {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   overflow: auto;
+  z-index: 3;
 }
 .about_content {
   background-color: #fefefe;
@@ -294,9 +295,9 @@ h6 {
   display: none;
   position: fixed;
   right: 0;
-  top: 138px;
+  top: 140px;
   width: 250px;
-  height: 520px;
+  height: 575px;
   background-color: #fefefe;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.4);
 }
